--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,10 +113,16 @@ img {
   z-index: var(--z-modal);
   background-color: hsla(230, 75%, 15%, .1);
   backdrop-filter: blur(24px);
-  -webkit-backdrop-filter: blur(24px); /* For safari */
+  -webkit-backdrop-filter: blur(24px);
+  /* For safari */
   padding: 8rem 1.5rem 0;
   opacity: 0;
   pointer-events: none;
+  display: flex;
+  justify-content: center;
+  /* Horizontally center the content */
+  align-items: center;
+  /* Vertically center the content */
   transition: opacity .4s;
 }
 
@@ -160,9 +166,9 @@ img {
   column-gap: 1rem;
 }
 
-.nav__search, 
-.nav__login, 
-.nav__toggle, 
+.nav__search,
+.nav__login,
+.nav__toggle,
 .nav__close {
   font-size: 1.25rem;
   color: var(--title-color);
@@ -252,7 +258,7 @@ img {
 }
 
 /*=============== LOGIN ===============*/
-.login__form, 
+.login__form,
 .login__group {
   display: grid;
 }
@@ -264,7 +270,6 @@ img {
   border-radius: 1rem;
   row-gap: 1.25rem;
   text-align: center;
-  transform: translateY(-1rem);
   transition: transform .4s;
 }
 
@@ -341,9 +346,10 @@ img {
 /*=============== BREAKPOINTS ===============*/
 /* For medium devices */
 @media screen and (min-width: 576px) {
+
   .search,
   .login {
-    padding-top: 10rem;
+    padding-top: calc(20vh - 10rem)
   }
 
   .search__form {
@@ -364,6 +370,7 @@ img {
   .login__form {
     max-width: 400px;
     margin-inline: auto;
+    width: 400px;
   }
 }
 
@@ -373,13 +380,16 @@ img {
     height: calc(var(--header-height) + 2rem);
     column-gap: 3rem;
   }
-  .nav__close, 
+
+  .nav__close,
   .nav__toggle {
     display: none;
   }
+
   .nav__menu {
     margin-left: auto;
   }
+
   .nav__list {
     flex-direction: row;
     column-gap: 3rem;
@@ -387,6 +397,7 @@ img {
 
   .login__form {
     padding: 3rem 2rem 3.5rem;
+    width: 600px;
   }
 }
 
