--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,620 +1,364 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600&display=swap");
 
-/*=============== VARIABLES CSS ===============*/
-:root {
-  --header-height: 3rem;
-
-  /*========== Colors ==========*/
-  /*Color mode HSL(hue, saturation, lightness)*/
-  --first-color: hsl(230, 75%, 56%);
-  --title-color: hsl(0, 0%, 100%);
-  --text-color: hsl(0, 0%, 100%);
-  --body-color: #051121;
-  --gradiant: linear-gradient(45deg , #051121,#051121, #051121, #032210, #032210);
-  --container-color: #08171e;
-  --border-color: hsl(230, 25%, 80%);
-
-  /*========== Font and typography ==========*/
-  /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: "Syne", sans-serif;
-  --h2-font-size: 1.25rem;
-  --normal-font-size: .938rem;
-
-  /*========== Font weight ==========*/
-  --font-regular: 400;
-  --font-medium: 500;
-  --font-semi-bold: 600;
-
-  /*========== z index ==========*/
-  --z-fixed: 100;
-  --z-modal: 1000;
+body {
+  background: linear-gradient(45deg, #555555, #151515, #050505, #151515);
+  font-family: Syne;
+  color: white;
+  margin: 0 !important;
 }
 
-/*========== Responsive typography ==========*/
-@media screen and (min-width: 1023px) {
-  :root {
-    --h2-font-size: 1.5rem;
-    --normal-font-size: 1rem;
+.navbar-title {
+  width: 150px;
+  height: 60px;
+}
+
+nav {
+  position: fixed;
+  height: 60px;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  backdrop-filter: blur(10px);
+  z-index: 10000000;
+}
+
+.navbar-center {
+  display: none;
+  padding: 10px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  justify-content: cener;
+  align-items: center;
+  gap: 10px;
+}
+
+.navbar {
+  padding: 10px;
+  border-radius: 50px;
+  border: 1px solid transparent;
+  width: max-content;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.landing {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-between;
+  z-index: -10;
+  overflow: hidden;
+}
+
+.navbar-icon-item {
+  display: none;
+}
+
+.navbar-login-item {
+  border-radius: 30px;
+  border: #fff solid 1px;
+  padding: 10px;
+  transition: all ease-in-out 200ms;
+}
+
+.navbar-login-item:hover {
+  padding: 15px;
+}
+
+.outer-ring {
+  background:
+    linear-gradient(#050505 0 0) padding-box,
+    linear-gradient(to right, #b4a5a5, #151515, #151515, #b4a5a5) border-box;
+  padding: 10px;
+  border: 1px solid transparent;
+  border-radius: 100%;
+  display: inline-block;
+  height: 400px;
+
+  aspect-ratio: 1;
+  transform: translate(0, 210px);
+  z-index: -10;
+}
+
+.inner-ring {
+  background:
+    linear-gradient(#050505 0 0) padding-box,
+    linear-gradient(to right, #b4a5a5, #151515, #151515, #b4a5a5) border-box;
+  border-radius: 100%;
+  height: 200px;
+  aspect-ratio: 1;
+  transform: translate(100px, 100px);
+  border: 1px solid transparent;
+}
+
+.planet {
+  background: #faef5d;
+  height: 70px;
+  aspect-ratio: 1;
+  border-radius: 100%;
+  transform: translate(65px, 60px);
+  box-shadow: 0 0 20px 4px #faef5d;
+}
+
+.planet-2 {
+  height: 50px;
+  aspect-ratio: 1;
+  border-radius: 100%;
+  background: #ff004d;
+  position: fixed;
+  transform: translate(0, 60px);
+  box-shadow: 0 0 20px 4px #ff004d;
+}
+
+.planet-3 {
+  height: 30px;
+  aspect-ratio: 1;
+  border-radius: 100%;
+  background: #1d2b53;
+  position: fixed;
+  transform: translate(180px, 60px);
+  box-shadow: 0 0 20px 4px #1d2b53;
+}
+
+.main {
+  margin-top: 60px;
+}
+
+.tagline {
+  font-size: calc(3vw + 3vh);
+  margin-top: 200px;
+  text-align: center;
+  /** TEXT GRADIENT */
+  color: #ffffff;
+  background-image: -webkit-linear-gradient(0deg, #ffffff 52%, #a8a8a8 96%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
+}
+
+.stars {
+  background-image: url(https://uploads-ssl.webflow.com/6408bea3de5aef58b7e197d4/6438c3059d443cd7a78762eb_stars-bg.png);
+  background-position: 50%;
+  background-size: 1090px;
+  top: 0%;
+  left: 0%;
+  overflow: hidden;
+  z-index: 100;
+  animation: slide 15s linear infinite;
+}
+
+.about {
+  background:
+    linear-gradient(#151515 0 0) padding-box,
+    linear-gradient(to right, #b4a5a5, #151515, #151515, #b4a5a5) border-box;
+  border-top: 1px solid transparent;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  color: white;
+  font-size: 2.35em;
+  text-align: left;
+  padding: 100px;
+}
+
+.team {
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+}
+
+.team-title {
+  font-size: 4em;
+  text-align: center;
+}
+
+.team-member img {
+  width: 100px;
+  aspect-ratio: 1;
+  border-radius: 100%;
+}
+
+.team-founders {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-frontend {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+u  justify-content: center;
+  margin-top: 100px;
+}
+
+.team-member {
+  display: flex;
+  flex-direction: column;
+ t gap: 10px;
+  align-items: center;
+  background: #000;
+  padding: 10px;
+  border-radius: 10px;
+  width: 200px;
+  text-align: left;
+  margin-top: 50px;
+}
+
+.media {
+  margin-top: 30px;
+}
+
+.projects {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.projects .card {
+  background-color: #ccc;
+  width: 300px;
+  height: 150px;
+  aspect-ratio: 2;
+  border-radius: 10px;
+}
+
+.navbar-text-item {
+  font-size: 1em;
+  transition: font-size 200ms ease-in-out;
+}
+
+.navbar-text-item:hover {
+  font-size: 1.5em;
+}
+
+.navbar-center-item {
+  font-size: 1em;
+  transition: font-size 200ms ease-in-out;
+}
+
+.navbar-center-item:hover {
+  font-size: 1.5em;
+}
+
+@media only screen and (min-width: 1000px) {
+  .navbar-center {
+    display: flex;
+  }
+
+  .navbar-text-item {
+    display: none;
+  }
+
+  .navbar-text-item .login {
+    display: block;
   }
 }
 
-/*=============== BASE ===============*/
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+@media only screen and (max-width: 500px) {
+  .navbar-text-item {
+    display: none;
+  }
+
+  .navbar-icon-item {
+    display: block;
+  }
+
+  .navbar-login-item {
+    display: none;
+  }
+     
+  .about {
+    padding: 50px;
+    padding-top: 100px;
+  }
+
+  .projects .card {
+    width: 200px;
+    height: 100px;
+  }
+
+  .team-member {
+    scale: 80%;
+    height: min-content;
+  }
+
+  .team-founders-member {
+    gap: 10px!important;
+  }
+
+  .about {
+    font-size: 1.5em;
+  }
+
+  .navbar-title {
+    width: 100px;
+    height: 40px;
+  }
 }
 
-.logo{
-  width: 21vh;
-  height: 7vh;
-  margin: 0 auto;
-  display: block;
+@keyframes slide {
+  0% {
+    background-position: 1vh;
+  }
+
+  100% {
+    background-position: 10vh;
+    /* The image width */
+  }
 }
 
-html {
-  scroll-behavior: smooth;
+#highlight {
+  opacity: 10%;
+  transition: opacity 0.4s;
 }
 
-body,
-input,
-button {
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
+mark {
+  background: none;
+  color: #fff;
 }
 
-body {
-  background-image: var(--gradiant);
-  color: var(--text-color);
+.actions {
+  height: 40vh;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
-input,
-button {
-  border: none;
-  outline: none;
+.actions a {
+  padding: 20px;
+  background: none;
+  box-shadow: none;
+  color: white;
+  font-family: Syne;
+  border-radius: 50px;
+  border: 1px #fff solid;
+  transition: all 200ms ease-in-out;
+  text-decoration: none;
 }
 
-ul {
-  list-style: none;
+.actions a:hover {
+  padding: 30px;
+  border-width: 10px;
+  background: #fff;
+  color: #000;
+}
+
+.actions a:active {
+  background: #fff;
 }
 
 a {
   text-decoration: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: 100%;
-}
-
-/*=============== REUSABLE CSS CLASSES ===============*/
-.container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
-}
-
-.main {
-  position: relative;
-  height: 100vh;
-}
-
-.main__bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-  z-index: -1;
-}
-
-.login {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: var(--z-modal);
-  background-color: hsla(230, 75%, 15%, .1);
-  backdrop-filter: blur(24px);
-  -webkit-backdrop-filter: blur(24px);
-  /* For safari */
-  padding: 8rem 1.5rem 0;
-  opacity: 0;
-  pointer-events: none;
-  display: flex;
-  justify-content: center;
-  /* Horizontally center the content */
-  align-items: center;
-  /* Vertically center the content */
-  transition: opacity .4s;
-}
-.search{
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: var(--z-modal);
-  background-color: hsla(230, 75%, 15%, .1);
-  backdrop-filter: blur(24px);
-  -webkit-backdrop-filter: blur(24px); /* For safari */
-  padding: 8rem 1.5rem 0 !important;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity .4s;
-}
-
-.search__close,
-.login__close {
-  position: absolute;
-  top: 7vh !important;
-  right: 2rem;
-  font-size: 1.5rem;
-  color: var(--title-color);
-  cursor: pointer;
-}
-
-/*=============== HEADER & NAV ===============*/
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: var(--body-color);
-  box-shadow: 0 0px 20px hsla(0, 0%, 100%, 0.15);
-  z-index: var(--z-fixed);
-}
-
-.nav {
-  height: calc(var(--header-height) + 1rem);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav__logo {
-  color: var(--title-color);
-  font-weight: var(--font-semi-bold);
-  transition: color .4s;
-}
-
-.nav__actions {
-  display: flex;
-  align-items: center;
-  column-gap: 1rem;
-}
-
-.nav__search,
-.nav__login,
-.nav__toggle,
-.nav__close {
-  font-size: 1.25rem;
-  color: var(--title-color);
-  cursor: pointer;
-  transition: color .4s;
-}
-
-:is(.nav__logo, .nav__search, .nav__login, .nav__toggle, .nav__link):hover {
-  color: var(--first-color);
-}
-
-/* Navigation for mobile devices */
-@media screen and (max-width: 1023px) {
-  .nav__menu {
-    position: fixed;
-    top: -100%;
-    left: 0;
-    background-color: var(--body-color);
-    box-shadow: 0 8px 16px hsla(230, 75%, 32%, .15);
-    width: 100%;
-    padding-block: 4.5rem 4rem;
-    transition: top .4s;
-  }
-}
-
-.nav__list {
-  display: flex;
-  flex-direction: column;
-  row-gap: 2.5rem;
-  text-align: center;
-}
-
-.nav__link {
-  color: var(--title-color);
-  font-weight: var(--font-semi-bold);
-  transition: color .4s;
-}
-
-.nav__close {
-  position: absolute;
-  top: 1.15rem;
-  right: 1.5rem;
-}
-
-/* Show menu */
-.show-menu {
-  top: 0;
-}
-
-/*=============== SEARCH ===============*/
-.search__form {
-  border: 2px solid var(--border-color);
-  display: flex;
-  align-items: center;
-  column-gap: .5rem;
-  background-color: var(--container-color);
-  box-shadow: 0 8px 32px hsla(230, 75%, 15%, .2);
-  padding-inline: 1rem;
-  border-radius: .5rem;
-  transform: translateY(-1rem);
-  transition: transform .4s;
-}
-
-.search__icon {
-  font-size: 1.25rem;
-  color: var(--title-color);
-}
-
-.search__input {
-  width: 100%;
-  padding-block: 1rem;
-  background-color: var(--container-color);
-  color: var(--text-color);
-}
-
-.search__input::placeholder {
-  color: var(--text-color);
-}
-
-/* Show search */
-.show-search {
-  opacity: 1;
-  pointer-events: initial;
-}
-
-.show-search .search__form {
-  transform: translateY(0);
-}
-
-/*=============== LOGIN ===============*/
-.login__form,
-.login__group {
-  display: grid;
-}
-
-.login__form {
-  border: 2px solid var(--border-color);
-  background-color: var(--container-color);
-  padding: 2rem 1.5rem 2.5rem;
-  box-shadow: 0 8px 32px hsla(230, 75%, 15%, .2);
-  border-radius: 1rem;
-  row-gap: 1.25rem;
-  text-align: center;
-  transition: transform .4s;
-}
-
-.login__title {
-  font-size: var(--h2-font-size);
-  color: var(--title-color);
-}
-
-.login__group {
-  row-gap: 1rem;
-}
-
-.login__label {
-  display: block;
-  text-align: initial;
-  color: var(--title-color);
-  font-weight: var(--font-medium);
-  margin-bottom: .25rem;
-}
-
-.login__input {
-  width: 100%;
-  background-color: var(--container-color);
-  border: 2px solid var(--border-color);
-  padding: 1rem;
-  border-radius: .5rem;
-  color: var(--text-color);
-}
-
-.login__input::placeholder {
-  color: var(--text-color);
-}
-
-.login__signup {
-  margin-bottom: .5rem;
-}
-
-.login__signup a {
-  color: var(--first-color);
-}
-
-.login__forgot {
-  display: inline-block;
-  color: var(--first-color);
-  margin-bottom: 1.25rem;
-}
-
-.login__button {
-  display: inline-block;
-  background-color: var(--first-color);
-  width: 100%;
   color: #fff;
-  font-weight: var(--font-semi-bold);
-  padding: 1rem;
-  border-radius: .5rem;
-  cursor: pointer;
-  transition: box-shadow .4s;
-}
-
-.login__button:hover {
-  box-shadow: 0 4px 24px hsla(230, 75%, 40%, .4);
-}
-
-/* Show login */
-.show-login {
-  opacity: 1;
-  pointer-events: initial;
-}
-
-.show-login .login__form {
-  transform: translateY(0);
-}
-
-/*=============== BREAKPOINTS ===============*/
-/* For medium devices */
-@media screen and (min-width: 576px) {
-
-  .search,
-  .login {
-    padding-top: calc(20vh - 10rem)
-  }
-
-  .search__form {
-    max-width: 450px;
-    margin-inline: auto;
-  }
-
-  .search__close,
-  .login__close {
-    width: max-content;
-    top: 5rem;
-    left: 0;
-    right: 0;
-    margin-inline: auto;
-    font-size: 2rem;
-  }
-
-  .login__form {
-    max-width: 400px;
-    margin-inline: auto;
-    width: 400px;
-  }
-}
-
-/* For large devices */
-@media screen and (min-width: 1023px) {
-  .nav {
-    height: calc(var(--header-height) + 2rem);
-    column-gap: 3rem;
-  }
-
-  .nav__close,
-  .nav__toggle {
-    display: none;
-  }
-
-  .nav__menu {
-    margin-left: auto;
-  }
-
-  .nav__list {
-    flex-direction: row;
-    column-gap: 3rem;
-  }
-
-  .login__form {
-    padding: 3rem 2rem 3.5rem;
-    width: 600px;
-  }
-}
-
-@media screen and (min-width: 1150px) {
-  .container {
-    margin-inline: auto;
-  }
-}
-
-.coming-soon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  text-align: center;
-}
-
-.coming-soon h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-}
-
-.coming-soon p {
-  font-size: 1.2rem;
-  margin-bottom: 2rem;
-  max-width: 30rem;
-}
-
-.btn__link {
-  color: #ddd;
-  font-weight: var(--font-semi-bold);
-  transition: color .4s;
-}
-
-.btn_t__link {
-  color: #716d7a;
-  font-weight: var(--font-semi-bold);
-  transition: color .4s;
-}
-
-.button-group {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  padding-bottom: 3rem;
-}
-
-.btn {
-  padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.btn-primary {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-}
-
-.btn-primary:hover {
-  background-color: #0069d9;
-}
-
-.btn-secondary {
-  background-color: #6c757d;
-  color: #fff;
-  border: none;
-}
-
-.btn-secondary:hover {
-  background-color: #5a6268;
-}
-
-.btn-tertiary {
-  background-color: #fff;
-  color: #007bff;
-  border: 1px solid #007bff;
-}
-
-.btn-tertiary:hover {
-  background-color: #e9ecef;
-}
-
-.circle {
-  position: absolute;
-  top: 40%;
-  left: 80%;
-  width: 200px;
-  height: 200px;
-  background-color: rgba(0, 123, 255, 0.1);
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.circle-2 {
-  position: absolute;
-  top: 70%;
-  left: 20%;
-  width: 100px;
-  height: 100px;
-  background-color: rgba(0, 123, 255, 0.1);
-  border-radius: 50%;
-  opacity: 0.5;
-}
-
-.triangle {
-  position: absolute;
-  bottom: -50px;
-  right: 0;
-  width: 0;
-  height: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-top: 50px solid rgba(0, 123, 255, 0.1);
-  opacity: 0.5;
-}
-
-.triangle-2 {
-  position: absolute;
-  top: 20%;
-  left: 10%;
-  width: 0;
-  height: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-bottom: 50px solid rgba(0, 123, 255, 0.1);
-  opacity: 0.5;
-}
-
-.square {
-  position: absolute;
-  bottom: -50px;
-  left: 50%;
-  width: 100px;
-  height: 100;
-
-}
-
-label {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-h3 {
-  margin-top: 15px;
-  margin-bottom: 5px;
-}
-
-.progress__container { 
-  background-color: var(--title-color); 
-  width: 150%;
-  height: 1rem;
-  border-radius: 20px; 
-} 
-
-.progress__fill { 
-  height: 1rem;
-  background-image: linear-gradient(to right, #34B7E1, #31E87A);; 
-  color: white; 
-  padding: 1%; 
-  text-align: right; 
-  font-size: 20px; 
-  border-radius: 20px; 
-} 
-
-.completion__container { 
-  width: 40%; 
-}
-
-.profile__container {
-  display: flex; 
-  flex-direction: column; 
-  align-items: center; 
-  justify-content: center; 
-  margin-top: 5%; 
-}
-.profile__container-img {
-  margin-top: 2vh;
-  margin-right: -3vh;
-  border: 2px solid var(--border-color);
-  width: 4rem; 
-  height: 4rem; 
-  border-radius: 50%;
-
-}
-.profile{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5%;
 }
