--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,6 +189,7 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 50px
 }
 
 .team-frontend {
@@ -202,10 +203,10 @@ u  justify-content: center;
 .team-member {
   display: flex;
   flex-direction: column;
- t gap: 10px;
+  gap: 10px;
   align-items: center;
   background: #000;
-  padding: 10px;
+  padding: 20px;
   border-radius: 10px;
   width: 200px;
   text-align: left;
